# Author: petter.strandmark@gmail.com (Petter Strandmark)

FILE(GLOB SPII_INTERNAL_SRC *.cpp)

SET(SPII_LIBRARY_SOURCE
	${SPII_INTERNAL_SRC}
	${SPII_HEADERS})

ADD_LIBRARY(spii SHARED ${SPII_LIBRARY_SOURCE})
TARGET_LINK_LIBRARIES(spii ${SPII_LIBRARY_DEPENDENCIES})
TARGET_LINK_LIBRARIES(spii meschach)

INSTALL(TARGETS spii
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
